--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "immutable": "3.8.1",
     "key-mirror": "1.0.1",
     "react": "15.3.1",
+    "react-mixin": "2.0.2",
     "react-native": "0.32.0",
+    "react-native-i18n": "0.0.8",
     "react-native-navbar": "1.5.0",
     "react-native-router-flux": "3.31.1",
     "react-native-simple-store": "1.0.1",
@@ -33,8 +35,9 @@
     "react-native-vector-icons": "2.0.3",
     "react-redux": "4.4.5",
     "redux": "3.5.2",
-    "redux-thunk": "2.1.0",
+    "react-timer-mixin": "^0.13.3",
     "redux-logger": "2.6.1",
+    "redux-thunk": "2.1.0",
     "regenerator": "0.8.46",
     "tcomb-form-native": "0.5.3",
     "undefined": "0.1.0",
