--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,6 +6,16 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.3'
+        classpath 'me.tatarka:gradle-retrolambda:3.2.5'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+//        classpath "io.realm:realm-gradle-plugin:1.1.0"
+
+        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.5.5'
+        classpath "net.rdrei.android.buildtimetracker:gradle-plugin:0.8.0"
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.13.0'
+//        classpath 'com.chenenyu:img-optimizer:1.1.0'
+
+        classpath 'com.mcxiaoke.gradle:packer-ng:1.0.7'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -14,11 +24,117 @@ buildscript {
 
 allprojects {
     repositories {
-        mavenLocal()
         jcenter()
         maven {
-            // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
-            url "$rootDir/../node_modules/react-native/android"
+            // All of React Native (JS, Android binaries) is installed from npm
+            url "$rootDir/node_modules/react-native/android"
+//            url "https://jitpack.io"
+        }
+        flatDir {
+            dirs 'libs' //this way we can find the .aar file in libs folder
         }
     }
+    tasks.whenTaskAdded { task ->
+        if (task.name.equals("lint")) {
+            task.enabled = false
+        }
+    }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
+
+def daggerVersion = "2.6"
+def retrofitVersion = "2.1.0"
+def supportVersion = "24.2.0"
+def rxBindingVersion = '0.4.0'
+
+def leakCanaryVersion = "1.4-beta2"
+def blockCanaryVersion = '1.2.0'
+def okHttpVersion = '3.4.1'
+def gsonVersion = '2.7'
+
+def rxJavaVersion = '1.1.9'
+def rxAndroidVersion = '1.2.1'
+
+def frescoVersion = '0.13.0'
+
+
+project.ext {
+
+    applicationId = "com.mdth.petlover"
+    buildToolsVersion = "23.0.3"
+    compileSdkVersion = 23
+    minSdkVersion = 16
+    targetSdkVersion = 22
+    versionCode = 14
+    versionName = "1.3.0.4"
+    abortOnLintError = false
+    checkLintRelease = false
+    useJack = false
+    abortOnLintError = false
+
+    javaVersion = JavaVersion.VERSION_1_8
+
+    libSupportAppcompat = "com.android.support:appcompat-v7:${supportVersion}"
+    libSupportDesign = "com.android.support:design:${supportVersion}"
+    libSupportRecyclerview = "com.android.support:recyclerview-v7:${supportVersion}"
+    libSupportV4 = "com.android.support:support-v4:${supportVersion}"
+
+    libRxAndroid = "io.reactivex:rxandroid:${rxAndroidVersion}"
+    libRxJava = "io.reactivex:rxjava:${rxJavaVersion}"
+    libEventBus = "org.greenrobot:eventbus:3.0.0"
+    libJavaxAnnotation = "javax.annotation:jsr250-api:1.0"
+    libJavaxInject = "javax.inject:javax.inject:1"
+
+    libGson = "com.google.code.gson:gson:${gsonVersion}"
+    libRetrofit = "com.squareup.retrofit2:retrofit:${retrofitVersion}"
+    libRetrofitConverterGson = "com.squareup.retrofit2:converter-gson:${retrofitVersion}"
+    libRetrofitAdapterRxJava = "com.squareup.retrofit2:adapter-rxjava:${retrofitVersion}"
+    libOkHttpLoggingInterceptor = "com.squareup.okhttp3:logging-interceptor:${okHttpVersion}"
+
+    libDagger = "com.google.dagger:dagger:${daggerVersion}"
+    libDaggerCompiler = "com.google.dagger:dagger-compiler:${daggerVersion}"
+
+    libFresco = "com.facebook.fresco:fresco:${frescoVersion}"
+    libFrescoImagePipeline = "com.facebook.fresco:imagepipeline-okhttp3:${frescoVersion}"
+
+//    // For animated GIF support
+//    compile 'com.facebook.fresco:animated-gif:${frescoVersion}'
+//
+//    // For WebP support, including animated WebP
+//    compile 'com.facebook.fresco:animated-webp:${frescoVersion}'
+//    compile 'com.facebook.fresco:webpsupport:${frescoVersion}'
+//
+//    // For WebP support, without animations
+//    compile 'com.facebook.fresco:webpsupport:${frescoVersion}'
+
+    libRxBinding = "com.jakewharton.rxbinding:rxbinding:${rxBindingVersion}"
+    libRxBindingSupportV4 = "com.jakewharton.rxbinding:rxbinding-support-v4:${rxBindingVersion}"
+    libRxBindingAppcompatV7 = "com.jakewharton.rxbinding:rxbinding-appcompat-v7:${rxBindingVersion}"
+    libRxBindingDesign = "com.jakewharton.rxbinding:rxbinding-design:${rxBindingVersion}"
+    libRxBindingRecyclerview = "com.jakewharton.rxbinding:rxbinding-recyclerview-v7:${rxBindingVersion}"
+
+    libGalleryFinal = 'cn.finalteam:galleryfinal:1.4.8.7'
+    libQiniuAndroidSdk = 'com.qiniu:qiniu-android-sdk:7.2+'
+
+//    libBindingCollectionAdapter = 'me.tatarka.bindingcollectionadapter:bindingcollectionadapter:1.1.0'
+//    libBindingCollectionAdapterRecyclerview = 'me.tatarka.bindingcollectionadapter:bindingcollectionadapter-recyclerview:1.1.0'
+//
+//    debugDependencies = [
+//            leakCanary : "com.squareup.leakcanary:leakcanary-android:${leakCanaryVersion}",
+//            blockcanary: "com.github.moduth:blockcanary-ui:${blockCanaryVersion}",
+//    ]
+//
+//    releaseDependencies = [
+//            leakCanary : "com.squareup.leakcanary:leakcanary-android-no-op:${leakCanaryVersion}",
+//            blockcanary: "com.github.moduth:blockcanary-no-op:${blockCanaryVersion}",
+//    ]
+
+    libLeakCanary = "com.squareup.leakcanary:leakcanary-android:${leakCanaryVersion}"
+    libBlockCanary = "com.github.moduth:blockcanary-ui:${blockCanaryVersion}"
+    libBlockCanaryRelease = "com.github.moduth:blockcanary-no-op:${blockCanaryVersion}"
+    libFlexbox = 'com.google.android:flexbox:0.2.3'
+    libPhotoView = 'me.relex:photodraweeview:1.0.0'
 }
