--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'me.tatarka.retrolambda'
-apply plugin: 'packer'
 
 /**
  * The react.gradle file registers a task for each build variant (e.g. bundleDebugJsAndAssets
@@ -117,7 +116,7 @@ android {
         abi {
             enable true
             reset()
-            include 'armeabi-v7a'//, 'x86'//, 'armeabi-v7a', 'mips'
+            include 'armeabi-v7a', 'x86'//, 'armeabi-v7a', 'mips'
             universalApk false
         }
     }
@@ -152,12 +151,6 @@ android {
             keyAlias keyProps["alias"]
             storePassword keyProps["storePass"]
             keyPassword keyProps["pass"]
-
-            // 同时满足下面两个条件才需要此配置
-            // 1. Gradle版本 >= 2.14.1
-            // 2. Android Gradle Plugin 版本 >= 2.2.0
-            // 作用是只使用旧版签名，禁用V2版签名模式
-//            v2SigningEnabled false
         }
     }
 
@@ -182,6 +175,7 @@ android {
 
 dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
+    compile project(':data')
     compile 'com.facebook.rebound:rebound:0.3.8'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.tencent.bugly:crashreport:2.2.0.0'
@@ -205,7 +199,6 @@ dependencies {
     compile 'com.bigkoo:convenientbanner:2.0.5'
     compile 'com.github.markzhai:databinding-rv-adapter:1.0.1'
     compile 'com.facebook.react:react-native:+'
-    compile 'com.mcxiaoke.gradle:packer-helper:1.0.7'
     compile project(':react-native-i18n')
     compile project(':react-native-simpledialog-android')
 }
