--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,14 +8,10 @@ buildscript {
         classpath 'com.android.tools.build:gradle:2.1.3'
         classpath 'me.tatarka:gradle-retrolambda:3.2.5'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-//        classpath "io.realm:realm-gradle-plugin:1.1.0"
 
         classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.5.5'
         classpath "net.rdrei.android.buildtimetracker:gradle-plugin:0.8.0"
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.13.0'
-//        classpath 'com.chenenyu:img-optimizer:1.1.0'
-
-        classpath 'com.mcxiaoke.gradle:packer-ng:1.0.7'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -27,7 +23,7 @@ allprojects {
         jcenter()
         maven {
             // All of React Native (JS, Android binaries) is installed from npm
-            url "$rootDir/node_modules/react-native/android"
+            url "$rootDir/../node_modules/react-native/android"
 //            url "https://jitpack.io"
         }
         flatDir {
@@ -63,7 +59,7 @@ def frescoVersion = '0.13.0'
 
 project.ext {
 
-    applicationId = "com.mdth.petlover"
+    applicationId = "com.github.moduth.petlover"
     buildToolsVersion = "23.0.3"
     compileSdkVersion = 23
     minSdkVersion = 16
