--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,5 +1,12 @@
 rootProject.name = 'PetLoverClient'
 
-include ':app', ':react-native-i18n', ':react-native-simpledialog-android'
+include ':app'
+include ':data'
+
+include ':lib_ext'
+project(':lib_ext').projectDir = new File('sdk/lib_ext')
+
+
+include ':react-native-i18n', ':react-native-simpledialog-android'
 project(':react-native-simpledialog-android').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-simpledialog-android/android')
 project(':react-native-i18n').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-i18n/android')
