--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -173,9 +173,16 @@ android {
     }
 }
 
+repositories{
+    flatDir{
+        dirs 'libs' //就是你放aar的目录地址
+    }
+}
+
 dependencies {
-    compile fileTree(dir: "libs", include: ["*.jar"])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':data')
+    compile name:'SMSSDK-2.1.1',ext:'aar'
     compile 'com.facebook.rebound:rebound:0.3.8'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.tencent.bugly:crashreport:2.2.0.0'
@@ -201,6 +208,8 @@ dependencies {
     compile 'com.facebook.react:react-native:+'
     compile project(':react-native-i18n')
     compile project(':react-native-simpledialog-android')
+    compile files('libs/MobCommons-2016.0714.1402.jar')
+    compile files('libs/MobTools-2016.0714.1402.jar')
 }
 
 // Run this once to be able to run the application with BUCK
