add ui framework

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -183,6 +183,8 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':data')
     compile project(':domain')
+    compile project(':lib_uikit')
+    compile project(':lib_uiframework')
     compile name:'SMSSDK-2.1.1',ext:'aar'
     compile 'com.facebook.rebound:rebound:0.3.8'
     compile 'com.android.support:multidex:1.0.1'
