--- a/android/sdk/lib_uiframework/src/main/AndroidManifest.xml
+++ b/android/sdk/lib_uiframework/src/main/AndroidManifest.xml
@@ -25,10 +25,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.github.moduth.uiframework">
 
-    <application android:allowBackup="true"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
->
+    <application>
 
     </application>
 
