--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,6 +1,6 @@
 rootProject.name = 'PetLoverClient'
 
-include ':app', ':lib_uiframework'
+include ':app'
 include ':domain'
 include ':data'
 
@@ -9,6 +9,9 @@ project(':lib_ext').projectDir = new File('sdk/lib_ext')
 
 include ':lib_uikit'
 project(':lib_uikit').projectDir = new File('sdk/lib_uikit')
+
+include ':lib_uiframework'
+project(':lib_uiframework').projectDir = new File('sdk/lib_uiframework')
 
 include ':react-native-i18n', ':react-native-simpledialog-android'
 project(':react-native-simpledialog-android').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-simpledialog-android/android')
